
appicondir = $(datadir)/gmdb/pixmaps

appicon_DATA =		\
	pk.xpm		\
	logo.xpm	\
	debug.xpm	\
	table.xpm	\
	query.xpm	\
	forms.xpm 	\
	reports.xpm	\
	macros.xpm	\
	code.xpm	\
	table_big.xpm	\
	query_big.xpm	\
	form_big.xpm	\
	report_big.xpm	\
	macro_big.xpm	\
	module_big.xpm	

EXTRA_DIST = $(appicon_DATA) 
